--- a/drivers/video/msm/mdss/Makefile
+++ b/drivers/video/msm/mdss/Makefile
@@ -77,3 +77,4 @@ obj-$(CONFIG_FB_MSM_MDSS_HDMI_DP_ANX7816) += dp/
 obj-$(CONFIG_FB_MSM_MDSS_KCAL_CTRL) += mdss_mdp_kcal_ctrl.o
 obj-$(CONFIG_FB_MSM_MDSS) += lcd_notify.o
 
+obj-$(CONFIG_FB_MSM_MDSS) += mdss_livedisplay.o
