--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineage"
+CONFIG_LOCALVERSION="-BlackScreen"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
