cpufreq: Introduce fingerprint boost driver
This driver, based on Sultanxda's input boost driver, boosts all available cpus to max freq after recieving an input notification from the fingerprint sensor to reduce lag

Change-Id: I4fda10616a5bf0ac281830c40a31b02dea3e6449
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -4485,4 +4485,5 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+CONFIG_FINGERPRINT_BOOST=y
 
