--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -349,6 +349,11 @@ CONFIG_PCI_LABEL=y
 #
 # Kernel Features
 #
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_ZSWAP=y
+CONFIG_POWERSUSPEND=y
 
 #
 # ARM errata workarounds via the alternatives framework
@@ -4477,3 +4482,4 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
