--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -215,6 +215,7 @@
 			qcom,parallel-usb-min-current-ma = <1400>;
 			qcom,parallel-usb-9v-min-current-ma = <900>;
 			qcom,parallel-allowed-lowering-ma = <500>;
+			qcom,autoadjust-vfloat;
 			qcom,pmic-revid = <&pmi8994_revid>;
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
@@ -320,13 +321,14 @@
 			status = "okay";
 			qcom,bcl-lm-threshold-ma = <127>;
 			qcom,bcl-mh-threshold-ma = <405>;
-			qcom,fg-iterm-ma = <125>;
+			qcom,fg-iterm-ma = <250>;
 			qcom,fg-chg-iterm-ma = <100>;
 			qcom,cycle-counter-en;
 			qcom,capacity-learning-on;
 			qcom,fg-cc-cv-threshold-mv = <4340>;
 			qcom,pmic-revid = <&pmi8994_revid>;
 			qcom,capacity-learning-feedback;
+			qcom,vbat-estimate-diff-mv = <100>;
 
 			qcom,fg-soc@4000 {
 				status = "okay";
@@ -513,7 +515,7 @@
 				qcom,qpnp-lab-ps-enable;
 				qcom,qpnp-lab-nfet-size = <100>;
 				qcom,qpnp-lab-pfet-size = <100>;
-				qcom,qpnp-lab-max-precharge-time = <500>;
+				qcom,qpnp-lab-max-precharge-time = <300>;
 			};
 		};
 
@@ -544,6 +546,7 @@
 			qcom,sync-dly-us = <800>;
 			qcom,fs-curr-ua = <25000>;
 			qcom,cons-sync-write-delay-us = <1000>;
+			qcom,en-phase-stag;
 			qcom,led-strings-list = [00 01 02 03];
 			qcom,en-ext-pfet-sc-pro;
 		};
@@ -555,7 +558,6 @@
 			interrupts = <0x3 0xc0 0x0>,
 				     <0x3 0xc0 0x1>;
 			interrupt-names = "sc-irq", "play-irq";
-			qcom,pmic-revid = <&pmi8994_revid>;
 			vcc_pon-supply = <&pon_perph_reg>;
 			qcom,play-mode = "direct";
 			qcom,wave-play-rate-us = <5263>;
@@ -577,7 +579,7 @@
 			qcom,lra-res-cal-period = <4>;
 		};
 
-		qcom,leds@d000 {
+		rgb_leds: qcom,leds@d000 {
 			compatible = "qcom,leds-qpnp";
 			reg = <0xd000 0x100>;
 			label = "rgb";
@@ -593,7 +595,14 @@
 				qcom,default-state = "off";
 				linux,name = "red";
 				linux,default-trigger =
-					"battery-charging";
+					"none";
+				qcom,start-idx = <0>;
+				qcom,ramp-step-ms = <100>;
+				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
+				   1e 1b 18 15 12 0f 0c 09 06 03 00];
+				qcom,pause-lo = <1000>;
+				qcom,lut-flags = <27>;
+				qcom,use-blink;
 			};
 
 			green_led: qcom,rgb_1 {
@@ -605,7 +614,14 @@
 				qcom,max-current = <12>;
 				qcom,default-state = "off";
 				linux,name = "green";
-				linux,default-trigger = "battery-full";
+				linux,default-trigger = "none";
+				qcom,start-idx = <0>;
+				qcom,ramp-step-ms = <100>;
+				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
+				   1e 1b 18 15 12 0f 0c 09 06 03 00];
+				qcom,pause-lo = <1000>;
+				qcom,lut-flags = <27>;
+				qcom,use-blink;
 			};
 
 			blue_led: qcom,rgb_2 {
@@ -617,7 +633,14 @@
 				qcom,max-current = <12>;
 				qcom,default-state = "off";
 				linux,name = "blue";
-				linux,default-trigger = "boot-indication";
+				linux,default-trigger = "none";
+				qcom,start-idx = <0>;
+				qcom,ramp-step-ms = <100>;
+				qcom,duty-pcts = [00 03 06 09 0c 0f 12 15 18 1b 1e
+				   1e 1b 18 15 12 0f 0c 09 06 03 00];
+				qcom,pause-lo = <1000>;
+				qcom,lut-flags = <27>;
+				qcom,use-blink;
 			};
 		};
 
