--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -340,7 +340,7 @@ config SUSPEND_TIME
 	  /sys/kernel/debug/suspend_time
 
 config DEDUCE_WAKEUP_REASONS
-	bool
+	bool "Deduce wakeup reasons"
 	default n
 
 config QUICK_WAKEUP
