regen zl1, and x2 defconfigs
Change-Id: Iaa25a9e68b785a0013209c41dd268bf1e683aa92

--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.89 Kernel Configuration
+# Linux/arm64 3.18.91 Kernel Configuration
 #
 CONFIG_VENDOR_LEECO=y
 CONFIG_ARM64=y
@@ -244,6 +244,7 @@ CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=18
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
+CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
@@ -1133,6 +1134,7 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+# CONFIG_FW_CACHE is not set
 CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
 CONFIG_DEV_COREDUMP=y
@@ -1757,6 +1759,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
+# CONFIG_SENSORS_HALL is not set
 
 #
 # Input Device Drivers
@@ -1919,6 +1922,8 @@ CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_VL53L0=y
 CONFIG_INPUT_NXU810=y
 # CONFIG_INPUT_PIXART_OTS_PAT9125_SWITCH is not set
+# CONFIG_SENSORS_LTR553 is not set
+# CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_INPUT_FPC1020 is not set
 CONFIG_INPUT_GP5xx8=y
 
