--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -115,6 +115,8 @@ CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 CONFIG_RCU_NOCB_CPU=y
+# CONFIG_RCU_NOCB_CPU_NONE is not set
+# CONFIG_RCU_NOCB_CPU_ZERO is not set
 CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
@@ -484,6 +486,8 @@ CONFIG_COMPAT=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_WAKELOCK=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -499,6 +503,8 @@ CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
+CONFIG_QUICK_WAKEUP=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -548,6 +554,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -1186,7 +1194,6 @@ CONFIG_TI_DRV2667=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 CONFIG_IR_MAXQ616=y
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_C2PORT is not set
 
 #
@@ -2797,6 +2804,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3885,6 +3893,7 @@ CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_QCOM_SMCINVOKE=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_WCD_DSP_GLINK is not set
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3907,6 +3916,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -4173,6 +4183,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
