--- a/arch/arm64/configs/lineage_zl1_defconfig
+++ b/arch/arm64/configs/lineage_zl1_defconfig
@@ -120,6 +120,7 @@ CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_NONE is not set
 # CONFIG_RCU_NOCB_CPU_ZERO is not set
 CONFIG_RCU_NOCB_CPU_ALL=y
+# CONFIG_RCU_EXPEDITE_BOOT is not set
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -301,7 +302,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
-# CONFIG_IOSCHED_SIOPLUS is not set
+CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -311,6 +312,7 @@ CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_ASN1=y
@@ -593,9 +595,9 @@ CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_FINGERPRINT_BOOST=y
 CONFIG_CPU_INPUT_BOOST=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -623,6 +625,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
